--- a/config
+++ b/config
@@ -30,7 +30,7 @@ font pango:Comfortaa 8
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec termite
 
 # kill focused window
 bindsym $mod+Shift+q kill
