--- a/.config/i3/config
+++ b/.config/i3/config
@@ -56,6 +56,12 @@ bindsym XF86MonBrightnessDown exec xbacklight - 5
 # print
 bindsym Print exec --no-startup-id cd Pictures && scrot && dunstify "Screenshot Taken"
 
+# lock
+bindsym $mod+ctrl+l exec --no-startup-id i3lock-fancy -f Google-Sans-Regular
+
+# hibernate
+bindsym $mod+ctrl+h exec --no-startup-id bash ~/.config/i3/scripts/hibernate.sh
+
 # split in horizontal orientation
 bindsym $mod+h split h
 
