--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -125,7 +125,8 @@ opacity-rule = [
 	"85:class_g = 'code'", 
 	"85:class_g = 'Polybar'", 
 	"75:class_g = 'Conky'", 
-    "85:class_g = 'Xed'",
+	"85:class_g = 'Xed'",
+	"95:class_g = 'Chromium'",
 	#"75:class_g = 'Termite'", 
 ]
 
